--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>LC-Website-HTML-View</title>
+<title>LC-Website-Refresh-Styles</title>
 <link href="LC-Website-CSS-Basic.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.typekit.net/rvk8ivh.css">
 </head>
