--- a/index.html
+++ b/index.html
@@ -67,5 +67,17 @@
 Learn more about what you can do to prevent runoff pollution on the Personal Pollution page. </small>
 <hr>
 	
+<pre>
+<code>
+h1 {
+    font-family: proxima-nova, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 40px;
+    color: #16214A;
+    line-height: 1.1em;
+</code>
+</pre>
+	
 </body>
 </html>
