--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 <small><strong>What You Can Do to Prevent Runoff Pollution</strong><br>
 Learn more about what you can do to prevent runoff pollution on the Personal Pollution page. </small>
 <hr>
-	
+
+<!-- Code snippets
+
+<h3>CSS Styles</h3>
+
 <pre>
 <code>
 h1 {
@@ -76,8 +80,11 @@ h1 {
     font-size: 40px;
     color: #16214A;
     line-height: 1.1em;
+}
 </code>
 </pre>
+
+-->
 	
 </body>
 </html>
