--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 
 <body>
 	
-<h1>Pollution Prevention</h1>
+<h1>Pollution Prevention &lt;h1&gt;</h1>
 	
-<h2>How Leon County Works to Prevent Nonpoint Source Pollution</h2>
+<h2>How Leon County Works to Prevent Nonpoint Source Pollution &lt;h2&gt;</h2>
 	
 <p>In Leon County, <strong>water quality</strong> issues are associated with nonpoint source pollution and changes in our watersheds. Water quality issues caused by nonpoint source pollution include excess nutrients, sediment, trash and bacteria. </p>
 
-<p style="color: black">Nonpoint source pollution happens as a result of rainfall moving over and through the ground. In turn, the rainwater picks up and carries away natural and human made pollutants which ultimately end up in lakes, rivers, wetlands, coastal waters and ground waters.</p>
+<p style="color: black">Nonpoint source pollution happens as a result of rainfall moving over and through the ground. In turn, the rainwater picks up and carries away natural and human made pollutants which ultimately end up in lakes, rivers, wetlands, coastal waters and ground waters. &lt;p&gt;</p>
 	
-<h3>Nonpoint source pollution can include: </h3>
+<h3>Nonpoint source pollution can include: &lt;h3&gt;</h3>
 	
 <ul class="lc-list">
   <li>Excess fertilizers, herbicides and insecticides from agricultural lands and residential areas; </li>
   <li>Oil, grease and toxic chemicals from urban runoff and energy production; </li>
-  <li>Trash from tobacco products or food waste that does not make it into a designated trash receptacle; </li>
+  <li>Trash from tobacco products or food waste that does not make it into a designated trash receptacle; &lt;ul&gt;</li>
 </ul>
 	
 <ol class="lc-list">
   <li> Pick up litter and use trash cans to dispose of regular waste; </li>
   <li> Dispose of all waste oil, grease, or wastewater containing oil and grease in a grease trap or interceptor; </li>
-  <li>Clean equipment in a mop sink or dedicated indoor cleaning area that drains to the sanitary sewer; </li>
+  <li>Clean equipment in a mop sink or dedicated indoor cleaning area that drains to the sanitary sewer; &lt;ol&gt;</li>
 </ol>
 		
 &nbsp;
 
+<p>&lt;table&gt;</p>	
 <table class="lc-table">
   <thead>
     <tr>
